# petalatlas

./: guidelines.md  package.json  pnpm-lock.yaml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: block_colors.json
src-tauri/icons/: icon.icns
src-tauri/src/: biome_types.rs  cache.rs  dev_tools.rs  java_assets.rs  main.rs  map_renderer.rs  nbt_editor.rs  players.rs  scanner.rs
src/lib/: WorldCard.svelte  textureHelper.svelte  types.ts
src/lib/components/: NbtEditor.svelte
src/lib/components/player/: AdvancementsPanel.svelte  EffectsPanel.svelte  EnderChestGrid.svelte  InventoryGrid.svelte  ItemEditor.svelte  ItemSlot.svelte  StatisticsPanel.svelte  StatsEditor.svelte  ValueSlider.svelte  index.ts
src/routes/: +layout.svelte  +page.svelte  +page_tahoe.css
src/routes/nbt/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/world/[id]/: +page.svelte
src/routes/world/[id]/map/: +page.svelte
src/routes/world/[id]/nbt/: +page.svelte
src/routes/world/[id]/players/: +page.svelte  PlayerDetailsCard.svelte  types.ts  utils.ts
src/routes/world/[id]/players/tabs/: AdvancementsTab.svelte  EffectsTab.svelte  InventoryTab.svelte  StatisticsTab.svelte  StatsTab.svelte  tabs.ts
