[package]
name = "tauri-appmcworlds"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_appmcworlds_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
base64 = "0.22"
zip = "2.0"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json"] }
rayon = "1.10"
rand = "0.8"
lazy_static = "1.4"
quartz_nbt = { version = "0.2.9", features = ["serde"] }
zuri_nbt = { version = "0.4.0", features = ["serde"] }
dirs = "5.0"
fastnbt = "2.5"
byteorder = "1.5"
image = { version = "0.24", features = ["png", "jpeg"] }
anvil-region = "0.4"

[profile.dev]
incremental = true
